Designed by <a href="https://ajaydas.tech">AJT</a> Dist<a href="https://github.com/Ajay-Das-k">AJT

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://github.com/Ajay-Das-k">Ajay</a> Dist<a href="https://github.com/Ajay-Das-k">Ajay 
+        Designed by <a href="https://ajaydas.tech">AJT</a> Dist<a href="https://github.com/Ajay-Das-k">AJT
       </div>
     </div>
 
